# sqlitch-v2

./: .bandit  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REPORT.md  TODO.md  backward.out  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: fixtests.prompt.md  implement.prompt.md  parity.prompt.md  pylint.prompt.md  quality.prompt.md  refresh.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: API_REFERENCE.md  SECURITY.md  TEST_REORGANIZATION_2025-10-12.md  UAT_ISOLATION.md
docs/architecture/: registry-lifecycle.md  uat-compatibility-testing.md
docs/reports/: UAT_ISOLATION_FIX_SUMMARY.md  code-quality-fixes-2025-10-03.md  code-review-integration.md  sqlite-gate.md  v1.0.0-migration-guide.md  v1.0.0-release-notes.md
docs/tutorials/: sqlite.md
scripts/: add_global_options.py  audit_exit_codes.py  audit_global_options.py  audit_stub_validation.py  check-skips.py  fix_flake8.py  merge_contract_tests.py  merge_lockdown_tests.py  migrate_test_isolation.py
scripts/docker-compose/: compose.yaml  down  up  wait
spec/memory/: constitution.md
specs/001-we-re-going/: code-quality-checklist.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sqlite/: code-quality-checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ensure-all-commands/: COMPLETION-REPORT.md  audit-exit-codes.md  audit-global-options.md  audit-stub-validation.md  audit-summary.md  constitution-compliance.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  t028-implementation-guide.md  tasks.md  test-skip-report.md
specs/004-sqlitch-tutorial-parity/: ANALYSIS-UPDATES.md  CRITICAL-BUG-PLAN-FORMAT.md  FEATURE_004_STATUS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_TEST_ISOLATION.md  README.md  ROADMAP.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-lockdown/: BASELINE_ASSESSMENT.md  CRITICAL_FINDINGS.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_REPORT_LOCKDOWN.md  IMPLEMENTATION_SUMMARY.md  PYLINT_ANALYSIS_2025-10-12.md  PYLINT_ANALYSIS_REPORT.md  PYLINT_COMPLETION.md  PYLINT_SESSION_REPORT_2025-10-12.md  REWORK_ANALYSIS.md  SESSION_CONTINUITY.md  SESSION_REPORT_2025-10-11.md  SESSION_REPORT_2025-10-12.md  SPEC_UPDATES_2025-10-12.md  SQITCH_PARITY_PRINCIPLE.md  SRC_LAYOUT_MIGRATION.md  SUMMARY.md  T060_BREAKDOWN_SUMMARY.md  T120_EXECUTION_SUMMARY.md  T120_T121_PLAN.md  TEST_CONSOLIDATION_PLAN.md  UAT_DISCOVERY_2025-10-11.md  (+8 more)
sqlitch/: __init__.py  pyproject.toml
tests/: conftest.py  test_engine_suite_skips.py  test_formatting.py  test_no_config_pollution.py  test_test_isolation_enforcement.py  test_type_safety.py  test_version.py
uat/: README.md  __init__.py  isolation.py  sanitization.py  side-by-side.py  test_steps.py
(+346 files in other folders)
