[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlitch"
version = "1.0.0"
description = "Python-based Sqitch-compatible CLI"
requires-python = ">=3.11"
authors = [{name = "SQLitch Contributors"}]
license = "MIT"
dependencies = [
  "click>=8.1",
  "rich>=13",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "PyMySQL>=1.1",
  "python-dateutil>=2.8",
  "tomli>=2.0",
  "pydantic>=2.4",
  "docker>=7.0",
]

[project.scripts]
sqlitch = "sqlitch.cli.main:main"

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "isort>=5.13",
  "flake8>=7.1",
  "pylint>=3.2",
  "mypy>=1.10",
  "bandit>=1.8.6",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-randomly>=3.15",
  "hypothesis>=6.100",
  "tox>=4.15",
  "types-pywin32>=306",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sqlitch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=sqlitch --cov-report=term-missing --cov-report=xml --cov-report=html --randomly-seed=1337"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
strict = true

[tool.bandit]
target = ["src/sqlitch"]

[tool.coverage.run]
branch = true
source = ["src/sqlitch"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.tox]
legacy_tox_ini = "tox.ini"
